feature : add api to compress folder at real time
